@@ -4,8 +4,6 @@ TODO-list for amaroK
 
 SHORT-TERM:
 
-    * fix: sample looping (annoying noise) @ end of track or pause (fixed? <berkus> NOT FIXED!)
-
     * fix: playobject config GUI seems totally b0rked on 3.2
     
     * fix: <mxcl> GroupBoxes can't have check boxes with Qt 3.1, so before next release do
